# slacc

./: .editorconfig  .gitattributes  .npmrc  Cargo.toml  Cross.toml  Makefile.toml  README.md  index.bench.mjs  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: CI.yml
.zed/: settings.json
crates/slacc-system-metrics/: Cargo.toml  build.rs
crates/slacc-system-metrics/src/: freebsd.rs  imp.rs  lib.rs  linux.rs  macos.rs  main.rs  windows.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
patches/: fix-build-failed-on-freebsd.patch  systeminformation+5.22.0.patch
src/: aho_corasick.rs  aws_lc_rs.rs  lib.rs  zip.rs
test/: aws_lc_rs.bench.loader.mjs  aws_lc_rs.bench.mjs
