[package]
name = "slacc-system-metrics"
version = "0.0.10"
edition = "2021"

[dependencies]
num = "0.4.1"
napi = { version = "2.12.2", default-features = false, optional = true }
napi-derive = { version = "2.12.2", optional = true }
clap = { version = "4.5.0", features = ["derive"] }
core-foundation-sys = "0.8.6"
errno = "0.3.8"
libc = "0.2"
thiserror = "1.0.56"
miette = { version = "7.1.0", features = ["fancy"] }

[features]
napi = ["napi/napi4", "napi-derive"]
nonblocking = ["napi"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54.0", features = [
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_IpHelper",
] }

[[bin]]
name = "slacc-system-metrics"
path = "src/main.rs"
